modified build.gradle for ristricted API warinings